--- a/blogweb/app/templates/_post.html
+++ b/blogweb/app/templates/_post.html
@@ -2,7 +2,7 @@
   <tr valign="top">
       <td style:"width=70px"><img src="{{ post.author.avatar(80) }}"></td>
       <td>
-        <strong>{{ post.author.username }}</strong> said:<br>{{ post.body }}<br>
+        <strong>{{ post.author.username }}</strong> said:<br><a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a><br>
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
   </tr>
 </table><hr>
