--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -43,7 +43,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="{{ url_for('messages') }}">
 							<i class="fa fa-message"></i>
 							<span>Messages</span>
 						</a>
