--- a/blogweb/app/templates/register.html
+++ b/blogweb/app/templates/register.html
@@ -30,6 +30,7 @@
 							<div class="input-box">
 								{{ form.password(size=32, class="input-area", id="register-password", placeholder=" ") }}
 								{{ form.password.label(class="input-label") }}
+								<label></label>
 							</div>
 						</div>
 					</div>
@@ -39,6 +40,7 @@
 							<div class="input-box">
 								{{ form.password2(size=32, class="input-area", id="confirm-password", placeholder=" ") }}
 								{{ form.password2.label(class="input-label") }}
+								<label></label>
 							</div>
 						</div>
 					</div>
