--- a/blogweb/app/templates/reset.html
+++ b/blogweb/app/templates/reset.html
@@ -12,6 +12,7 @@
 							<div class="input-box">
 								{{ form.password(size=32, class="input-area", id="reset-password", placeholder=" ") }}
 								{{ form.password.label(class="input-label") }}
+								<label></label>
 							</div>
 						</div>
 					</div>
@@ -21,6 +22,7 @@
 							<div class="input-box">
 								{{ form.password2(size=32, class="input-area", id="reset-confirm", placeholder=" ") }}
 								{{ form.password2.label(class="input-label") }}
+								<label></label>
 							</div>
 						</div>
 					</div>
