--- a/blogweb/app/templates/_post.html
+++ b/blogweb/app/templates/_post.html
@@ -2,7 +2,10 @@
   <tr valign="top">
       <td style:"width=70px"><img src="{{ post.author.avatar(80) }}"></td>
       <td>
-        <strong><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a></strong> said:<br>{{ post.body }}<br>
+        <strong>
+          <p><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+        </strong> said:</p><p>{{ post.body }}</p>
+
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
   </tr>
 </table><hr>
