--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -93,7 +93,11 @@
 				<h2>Post your comments now!</h2>
 			</div>
 		</div>
-		{% block content %}{% endblock %}	
+		{% block content %}{% endblock %}
+		<div class="assistant">
+
+
+		</div>	
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 					const checkbox = document.getElementById("checkbox");
@@ -114,5 +118,7 @@
 				}
 			});
 		</script>
+		<script src="https://l2dwidget.js.org/lib/L2Dwidget.min.js"></script>
+		<script src="{{ url_for('static', filename='live2D.js') }}"></script>
 	</body>
 </html>
