--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
+<div class="main-content" style = "margin-left: 20px;">
     <h1>Hi, {{ current_user.username }}!</h1>
-    <form action="" method="POST">
+    <button id="displayPostBtn" style = "margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">Show Question
+        form</button>
+
+    <form id="postForm" action="" method="POST" style="margin:20px; display: none">
         {{ form.hidden_tag() }}
         <p>
             {{ form.title.label }}<br>
@@ -24,27 +29,57 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-    <h3>Recent Posts</h3>
-    {% for post in posts %}
-    <div class="comments-container">
-        <div id="comments-list" class="comments-list">
-            <div class="comment-avatar">
-                <img src="{{ post.author.avatar(180) }}" alt="image">
-            </div>
-            <div class="comment-box">
-                <div class="comment-head">
-                    <h6 class="comment-name by-author"><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a></h6>
-                    <span>{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</span>
-                    <i class="fa fa-heart"></i>
+    <ul class="nav nav-tabs" style="cursor:pointer">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
+        </li>
+        <li class="nav-item" onclick="showTab(event, 'tab3')">
+          <a class="nav-link" >Follower Rank</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li> -->
+      </ul>
+ 
+    <div id="tab1"  class="tabcontent" style="display: block;">
+
+        <h3>Recent Posts</h3>
+        {% for post in posts %}
+        <div class="comments-container">
+            <div id="comments-list" class="comments-list">
+                <div class="comment-avatar">
+                    <img src="{{ post.author.avatar(180) }}" alt="image">
                 </div>
-                <div class="comment-content">
-                    <a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a>
-                    <p>{{ post.content }}</p>
+                <div class="comment-box">
+                    <div class="comment-head">
+                        <h6 class="comment-name by-author"><a
+                                href="{{ url_for('user', username=post.author.username) }}">{{
+                                post.author.username }}</a></h6>
+                        <span>{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                        <i class="fa fa-heart"></i>
+                    </div>
+                    <div class="comment-content">
+                        <a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a>
+                        <!-- <p>{{ post.content }}</p> -->
+                    </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
+    <div id="tab2" class="tabcontent">
+        <h3>Tab 2 content</h3>
+        <p>This is the content for tab 2.</p>
+      </div>
+       
+      <div id="tab3" class="tabcontent">
+        <h3>Tab 3 content</h3>
+        <p>This is the content for tab 3.</p>
+      </div>
+
     <nav>
         <ul style="list-style: none; padding: 0; display: flex; justify-content: center;">
             {% if posts.has_prev %}
@@ -83,4 +118,35 @@
         </ul>
     </nav>
 </div>
+
+<script>
+    function displayPostForm() {
+        let displayPostBtn = document.getElementById("displayPostBtn");
+        let postForm = document.getElementById("postForm")
+        if (postForm.style.display == "none") {
+            postForm.style.display = "block";
+            displayPostBtn.innerHTML = "Hide Question form";
+        } 
+        else {
+            postForm.style.display = "none";
+            displayPostBtn.innerHTML = "Show Question form";
+
+        }
+    }
+  
+    function showTab(event, tabName) {
+        var i, tabcontent, navlink;
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+        }
+        navlink = document.getElementsByClassName("nav-link");
+        for (i = 0; i < navlink.length; i++) {
+            navlink[i].className = navlink[i].className.replace(" active", "");
+        }
+        document.getElementById(tabName).style.display = "block";
+        event.currentTarget.className += " active";
+    }
+
+</script>
 {% endblock %}
