--- a/blogweb/app/templates/post_detail.html
+++ b/blogweb/app/templates/post_detail.html
@@ -1,3 +1,12 @@
+{% extends "base.html" %}
+{% block styles %}
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+{% endblock %}
+
+{% block content %}
+
 <!-- post_detail.html -->
 <h1>{{ post.title }}</h1>
 <p>{{ post.content }}</p>
@@ -9,7 +18,7 @@
     <ul>
         {% for reply in replies %}
             <li>{{ reply.content }}</li>
-            <small>By: {{ reply.user.username }}, {{ reply.timestamp }}</small>
+            <small>By: {{ reply.user.username }}, {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</small>
         {% endfor %}
     </ul>
 {% else %}
@@ -24,4 +33,8 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+ 
+<a class="btn btn-primary" style = "margin-top: 20px;" href="{{url_for('index', page=1)}}"> Back to index page</a>
+
+{% endblock %}
 
