--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -23,6 +23,11 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 	</head>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+	crossorigin="anonymous">
+</script>
 
 	<body>
 		<nav>
@@ -113,6 +118,7 @@
 							this.submit(); // If user confirms, submit the form
 					}
     		});
+
 				function initialize_popovers() {
         const popups = document.getElementsByClassName('user_popup');
         for (let i = 0; i < popups.length; i++) {
@@ -136,7 +142,6 @@
             if (popover && data) {
               ev.target.popupLoaded = true;
               popover.setContent({'.popover-body': data});
-              flask_moment_render_all();
             }
           });
         }
