--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -44,10 +44,16 @@
 					</li>
 					<li>
 						<a href="{{ url_for('messages') }}">
-							<i class="fa fa-message"></i>
-							<span>Messages</span>
+								<i class="fa fa-envelope"></i>
+								<span>Messages</span>
+								{% set unread_message_count = current_user.unread_message_count() %}
+								{% if unread_message_count > 0 %}
+										<span id="message_count" class="badge" style="visibility: {% if unread_message_count %}visible
+										{% else %}hidden {% endif %};">{{ unread_message_count }}</span>
+								{% endif %}
 						</a>
-					</li>
+				</li>
+				
 					<li>
 						<a href="{{ url_for('user', username=current_user.username) }}">
 							<i class="fa fa-user"></i>
@@ -111,8 +117,31 @@
 				event.preventDefault(); // Prevent the default form submission
 				if (confirm("Are you sure you want to delete your account? This operation cannot be undone.")) {
 						this.submit(); // If user confirms, submit the form
-				}
+				}			
+
 			});
+
+			function set_message_count(n) {
+				const count = document.getElementById('message_count');
+				count.innerText = n;
+				count.style.visibility = n ? 'visible' : 'hidden';
+			}
+
+			{% if current_user.is_authenticated %}
+			function initialize_notifications() {
+				let since = 0;
+				setInterval(async function() {
+					const response = await fetch('{{ url_for('notifications') }}?since=' + since);
+					const notifications = await response.json();
+					for (let i = 0; i < notifications.length; i++) {
+						if (notifications[i].name == 'unread_message_count')
+							set_message_count(notifications[i].data);
+						since = notifications[i].timestamp;
+					}
+				}, 10000);
+			}
+			document.addEventListener('DOMContentLoaded', initialize_notifications);
+			{% endif %}
 		</script>
 	</body>
 </html>
