Fixed import bug
Fixed import bug

--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>{{ 'Messages' }}</h1><br>
     {% for post in messages %}
-        {% include '_post.html' %}
+        {% include '_message.html' %}
     {% endfor %}
  
     <!-- pagination -->
