--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -47,7 +47,7 @@
     <div id="tab1"  class="tabcontent" style="display: block;">
 
         <h3>Recent Posts</h3>
-        {% for post in posts %}
+        <!-- {% for post in posts %}
         <div class="comments-container">
             <div id="comments-list" class="comments-list">
                 <div class="comment-avatar">
@@ -68,7 +68,11 @@
                 </div>
             </div>
         </div>
-        {% endfor %}
+        {% endfor %} -->
+
+    {% for post in posts %}
+        {% include '_post_question.html' %}
+    {% endfor %}
     </div>
     <div id="tab2" class="tabcontent">
         <h3>Tab 2 content</h3>
