--- a/blogweb/app/templates/_post.html
+++ b/blogweb/app/templates/_post.html
@@ -1,6 +1,6 @@
 <table>
   <tr valign="top">
-      <td ><img src="{{ post.author.avatar(100) }}"></td>
+      <td><img src="{{ post.author.avatar(100) }} " style="width: 100px; height: 100px;"></td>
       <td>
         <strong>
           <p><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
