--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -22,6 +22,9 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="{{ url_for('static', filename='chat.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='menu.css') }}">
+		<script src="{{ url_for('static', filename='chat.js') }}"></script>
 	</head>
 
 	<body>
@@ -95,9 +98,34 @@
 		</div>
 		{% block content %}{% endblock %}
 		<div class="assistant">
-
-
-		</div>	
+			<div id="chat_input">
+				<input id="question" type="text" placeholder="陪我聊聊天吧" onkeypress="return onKeyPress(event)"/>
+			</div>
+		</div>
+		<nav class="menu">
+			<input type="checkbox" class="menu-toggler" id="menu_toggler" checked>
+			<label for="menu_toggler"></label>
+			<ul>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-qq" aria-hidden="true"></i></a>
+				</li>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-weixin" aria-hidden="true"></i></a>
+				</li>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a>
+				</li>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-tencent-weibo" aria-hidden="true"></i></a>
+				</li>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+				</li>
+				<li class="menu-item">
+					<a href="#"><i class="fa fa-renren" aria-hidden="true"></i></a>
+				</li>
+			</ul>
+		</nav>
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 					const checkbox = document.getElementById("checkbox");
@@ -118,7 +146,6 @@
 				}
 			});
 		</script>
-		<script src="https://l2dwidget.js.org/lib/L2Dwidget.min.js"></script>
 		<script src="{{ url_for('static', filename='live2D.js') }}"></script>
 	</body>
 </html>
