--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -4,7 +4,7 @@
 <div>
   <table>
     <tr valign="top">
-        <td><img src="{{ user.avatar(200) }}" ></td>
+        <td><img src="{{ user.avatar(200) }}" style="width: 100px; height: 100px;"></td>
         <td><h1>User: {{ user.username }}</h1>
         {% if user.about_me %}<p>About me: {{ user.about_me }}</p>{% endif %}
         <span>Follower {{user.followers_count()}} Following {{user.following_count()}}</span><br><br>
