--- a/blogweb/app/static/base.css
+++ b/blogweb/app/static/base.css
@@ -162,7 +162,9 @@ body {
 	overflow: hidden;
 	opacity: 0.3;
 }
-
+.hero-image {
+	background-color: #000;
+}
 /* Text Effect */
 .heading {
 	position: absolute;
