--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -22,15 +22,7 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="{{ url_for('static', filename='chat.css') }}">
-		<link rel="stylesheet" href="{{ url_for('static', filename='menu.css') }}">
-		<script src="{{ url_for('static', filename='chat.js') }}"></script>
 	</head>
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-	crossorigin="anonymous">
-</script>
 
 	<body>
 		<nav>
@@ -60,7 +52,8 @@
 										{% else %}hidden {% endif %};">{{ unread_message_count }}</span>
 								{% endif %}
 						</a>
-				   </li>
+				</li>
+				
 					<li>
 						<a href="{{ url_for('user', username=current_user.username) }}">
 							<i class="fa fa-user"></i>
@@ -106,88 +99,29 @@
 				<h2>Post your comments now!</h2>
 			</div>
 		</div>
-		{% block content %}
-		<div class="assistant">
-			<div id="chat_input">
-				<input id="question" type="text" placeholder="陪我聊聊天吧" onkeypress="return onKeyPress(event)"/>
-			</div>
-		</div>
-		<nav class="menu">
-			<input type="checkbox" class="menu-toggler" id="menu_toggler" checked>
-			<label for="menu_toggler"></label>
-			<ul>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-qq" aria-hidden="true"></i></a>
-				</li>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-weixin" aria-hidden="true"></i></a>
-				</li>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-weibo" aria-hidden="true"></i></a>
-				</li>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-tencent-weibo" aria-hidden="true"></i></a>
-				</li>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-				</li>
-				<li class="menu-item">
-					<a href="#"><i class="fa fa-renren" aria-hidden="true"></i></a>
-				</li>
-			</ul>
-		</nav>
-		{% endblock %}
-			
-			<script>
-				document.addEventListener("DOMContentLoaded", function () {
-						const checkbox = document.getElementById("checkbox");
-						const searchContainer = document.querySelector(".search-container");
-		
-						checkbox.addEventListener("change", function () {
-								if (checkbox.checked) {
-										searchContainer.style.visibility = "visible";
-								} else {
-										searchContainer.style.visibility = "hidden";
-								}
-						});
-				});
-				document.getElementById("delete-form").addEventListener("submit", function(event) {
-					event.preventDefault(); // Prevent the default form submission
-					if (confirm("Are you sure you want to delete your account? This operation cannot be undone.")) {
-							this.submit(); // If user confirms, submit the form
-					}
-    		});
+		{% block content %}{% endblock %}	
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+					const checkbox = document.getElementById("checkbox");
+					const searchContainer = document.querySelector(".search-container");
+	
+					checkbox.addEventListener("change", function () {
+							if (checkbox.checked) {
+									searchContainer.style.visibility = "visible";
+							} else {
+									searchContainer.style.visibility = "hidden";
+							}
+					});
+			});
+			document.getElementById("delete-form").addEventListener("submit", function(event) {
+				event.preventDefault(); // Prevent the default form submission
+				if (confirm("Are you sure you want to delete your account? This operation cannot be undone.")) {
+						this.submit(); // If user confirms, submit the form
+				}			
 
-				function initialize_popovers() {
-        const popups = document.getElementsByClassName('user_popup');
-        for (let i = 0; i < popups.length; i++) {
-          const popover = new bootstrap.Popover(popups[i], {
-            content: 'Loading...',
-            trigger: 'hover focus',
-            placement: 'right',
-            html: true,
-            sanitize: false,
-            delay: {show: 500, hide: 0},
-            container: popups[i],
-            customClass: 'd-inline',
-          });
-          popups[i].addEventListener('show.bs.popover', async (ev) => {
-            if (ev.target.popupLoaded) {
-              return;
-            }
-            const response = await fetch('/user/' + ev.target.innerText.trim() + '/popup');
-            const data = await response.text();
-            const popover = bootstrap.Popover.getInstance(ev.target);
-            if (popover && data) {
-              ev.target.popupLoaded = true;
-              popover.setContent({'.popover-body': data});
-            }
-          });
-        }
-      }
-      document.addEventListener('DOMContentLoaded', initialize_popovers);
-        
-      function set_message_count(n) {
+			});
+
+			function set_message_count(n) {
 				const count = document.getElementById('message_count');
 				count.innerText = n;
 				count.style.visibility = n ? 'visible' : 'hidden';
@@ -208,9 +142,7 @@
 			}
 			document.addEventListener('DOMContentLoaded', initialize_notifications);
 			{% endif %}
-			</script>
-			<script src="{{ url_for('static', filename='live2D.js') }}"></script>
-			{% block script %}	
-			{% endblock %}
+		</script>
+		{% block script %}{% endblock %}
 	</body>
 </html>
