fix popover, fix tab change function at index page, add follower post without pagination

--- a/blogweb/app/templates/user_popup.html
+++ b/blogweb/app/templates/user_popup.html
@@ -9,14 +9,14 @@
     <p>
       <form action="{{ url_for('follow', username=user.username) }}" method="post">
         {{ form.hidden_tag() }}
-        {{ form.submit(value=_('Follow'), class_='btn btn-outline-primary btn-sm') }}
+        {{ form.submit(value=('Follow'), class_='btn btn-outline-primary btn-sm') }}
       </form>
     </p>
     {% else %}
     <p>
       <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
         {{ form.hidden_tag() }}
-        {{ form.submit(value=_('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
+        {{ form.submit(value=('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
       </form>
     </p>
     {% endif %}
