--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -124,3 +124,10 @@
   margin-left: 10px;
   border-radius: 3px;
 }
+.tabcontent {
+  display: none;
+}
+
+.tabcontent:first-child {
+  display: block;
+}
