--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -29,7 +29,6 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
-
     <ul class="nav nav-tabs" style="cursor:pointer">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
@@ -47,31 +46,44 @@
  
     <div id="tab1"  class="tabcontent" style="display: block;">
 
-        <h3>Recent Post</h3>
+        <h3>Recent Posts</h3>
 
 
-        {% for post in all_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
+    {% for post in posts %}
+        {% include '_post_question.html' %}
+    {% endfor %}
+    </div>
+    <div id="tab2" class="tabcontent">
+        <h3>Tab 2 content</h3>
+        <p>This is the content for tab 2.</p>
+      </div>
+       
+      <div id="tab3" class="tabcontent">
+        <h3>Tab 3 content</h3>
+        <p>This is the content for tab 3.</p>
+      </div>
+
+
+    
 
 		<nav aria-label="Page navigation example">
 			<ul class="pagination justify-content-center">
 		
-				{% if all_posts.has_prev %}
+				{% if posts.has_prev %}
 					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">First</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.prev_num) }}">Prev</a></li>
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=posts.prev_num) }}">Prev</a></li>
 				{% else %}
 					<li class="page-item disabled"><span class="page-link">First</span></li>
 				{% endif %}
 		
-				{% if all_posts.page > 4 %}
+				{% if posts.page > 4 %}
 					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">1</a></li>
 					<li class="page-item disabled"><span class="page-link">...</span></li>
 				{% endif %}
 		
-				{% for p in range(all_posts.page - 2, all_posts.page + 3) if p > 0 and p <= all_posts.pages %}
-					<li class="page-item {% if p == all_posts.page %}active{% endif %}">
-						{% if p == all_posts.page %}
+				{% for p in range(posts.page - 2, posts.page + 3) if p > 0 and p <= posts.pages %}
+					<li class="page-item {% if p == posts.page %}active{% endif %}">
+						{% if p == posts.page %}
 							<span class="page-link">{{ p }}</span>
 						{% else %}
 							<a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
@@ -79,36 +91,20 @@
 					</li>
 				{% endfor %}
 		
-				{% if all_posts.page < all_posts.pages - 3 %}
+				{% if posts.page < posts.pages - 3 %}
 					<li class="page-item disabled"><span class="page-link">...</span></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">{{ all_posts.pages }}</a></li>
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=posts.pages) }}">{{ posts.pages }}</a></li>
 				{% endif %}
 		
-				{% if all_posts.has_next %}
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.next_num) }}">Next</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">Last</a></li>
+				{% if posts.has_next %}
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=posts.next_num) }}">Next</a></li>
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=posts.pages) }}">Last</a></li>
 				{% else %}
 					<li class="page-item disabled"><span class="page-link">Next</span></li>
 					<li class="page-item disabled"><span class="page-link">Last</span></li>
 				{% endif %}		
 			</ul>
-		</nav>	
-    </div>
-    <!-- follower post -->
-    <div id="tab2" class="tabcontent">
-        {% for post in follow_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
-    </div>
-       
-    <div id="tab3" class="tabcontent">
-        <h3>Tab 3 content</h3>
-        <p>This is the content for tab 3.</p>
-    </div>
-
-
-    
-	
+		</nav>		
 {% endblock %}
 
       
