--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -138,5 +138,9 @@
     }
 
 </script>
+<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
+<script>
+    CKEDITOR.replace('content');
+</script>
 {% endblock %}
 
