--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -22,16 +22,12 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="{{ url_for('static', filename='chat.css') }}">
-		<link rel="stylesheet" href="{{ url_for('static', filename='menu.css') }}">
-		<script src="{{ url_for('static', filename='chat.js') }}"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous">
+		</script>
 	</head>
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-	crossorigin="anonymous">
-</script>
-
 	<body>
 		<nav>
 			<div class="sidebar">
@@ -108,57 +104,73 @@
 		</div>
 		{% block content %}
 		{% endblock %}
-			
-			<script>
-				document.addEventListener("DOMContentLoaded", function () {
-						const checkbox = document.getElementById("checkbox");
-						const searchContainer = document.querySelector(".search-container");
-		
-						checkbox.addEventListener("change", function () {
-								if (checkbox.checked) {
-										searchContainer.style.visibility = "visible";
-								} else {
-										searchContainer.style.visibility = "hidden";
-								}
-						});
-				});
-				document.getElementById("delete-form").addEventListener("submit", function(event) {
-					event.preventDefault(); // Prevent the default form submission
-					if (confirm("Are you sure you want to delete your account? This operation cannot be undone.")) {
-							this.submit(); // If user confirms, submit the form
-					}
-    		});
+		<script>
+			document.addEventListener('click', function(event) {
+				var checkbox = document.getElementById('checkbox');
+				var sidebar = document.querySelector('.sidebar');
 
-				function initialize_popovers() {
-        const popups = document.getElementsByClassName('user_popup');
-        for (let i = 0; i < popups.length; i++) {
-          const popover = new bootstrap.Popover(popups[i], {
-            content: 'Loading...',
-            trigger: 'hover focus',
-            placement: 'right',
-            html: true,
-            sanitize: false,
-            delay: {show: 500, hide: 0},
-            container: popups[i],
-            customClass: 'd-inline',
-          });
-          popups[i].addEventListener('show.bs.popover', async (ev) => {
-            if (ev.target.popupLoaded) {
-              return;
-            }
-            const response = await fetch('/user/' + ev.target.innerText.trim() + '/popup');
-            const data = await response.text();
-            const popover = bootstrap.Popover.getInstance(ev.target);
-            if (popover && data) {
-              ev.target.popupLoaded = true;
-              popover.setContent({'.popover-body': data});
-            }
-          });
-        }
-      }
-      document.addEventListener('DOMContentLoaded', initialize_popovers);
-        
-      function set_message_count(n) {
+				// Check if the click occurred outside of the sidebar and checkbox, and checkbox is not checked
+				if (!sidebar.contains(event.target) && event.target !== checkbox && !checkbox.checked) {
+						checkbox.checked = true; // Check the checkbox
+				}
+			});
+		</script>
+	
+		<script>
+			// This script is to alert users if they wanna delete their accounts.
+			document.getElementById("delete-form").addEventListener("submit", function(event) {
+				event.preventDefault(); // Prevent the default form submission
+				if (confirm("Are you sure you want to delete your account? This operation cannot be undone.")) {
+						this.submit(); // If user confirms, submit the form
+				}
+			});
+		</script>
+		<script>
+			// This script is to set when sidebar appear the search area will disappear. It is good for responsive display.
+			document.addEventListener("DOMContentLoaded", function () {
+				const checkbox = document.getElementById("checkbox");
+				const searchContainer = document.querySelector(".search-container");
+
+				checkbox.addEventListener("change", function () {
+					if (checkbox.checked) {
+							searchContainer.style.visibility = "visible";
+					} else {
+							searchContainer.style.visibility = "hidden";
+					}
+				});
+			});
+		</script>
+		<script>
+			function initialize_popovers() {
+			const popups = document.getElementsByClassName('user_popup');
+				for (let i = 0; i < popups.length; i++) {
+					const popover = new bootstrap.Popover(popups[i], {
+						content: 'Loading...',
+						trigger: 'hover focus',
+						placement: 'right',
+						html: true,
+						sanitize: false,
+						delay: {show: 500, hide: 0},
+						container: popups[i],
+						customClass: 'd-inline',
+					});
+					popups[i].addEventListener('show.bs.popover', async (ev) => {
+						if (ev.target.popupLoaded) {
+							return;
+						}
+						const response = await fetch('/user/' + ev.target.innerText.trim() + '/popup');
+						const data = await response.text();
+						const popover = bootstrap.Popover.getInstance(ev.target);
+						if (popover && data) {
+							ev.target.popupLoaded = true;
+							popover.setContent({'.popover-body': data});
+						}
+					});
+				}
+			}
+			document.addEventListener('DOMContentLoaded', initialize_popovers);
+				
+			function set_message_count(n) {
 				const count = document.getElementById('message_count');
 				count.innerText = n;
 				count.style.visibility = n ? 'visible' : 'hidden';
@@ -179,9 +191,9 @@
 			}
 			document.addEventListener('DOMContentLoaded', initialize_notifications);
 			{% endif %}
-			</script>
-			<script src="{{ url_for('static', filename='live2D.js') }}"></script>
-			{% block script %}	
-			{% endblock %}
+		</script>
+		<script src="{{ url_for('static', filename='live2D.js') }}"></script>
+		{% block script %}	
+		{% endblock %}
 	</body>
 </html>
