--- a/blogweb/app/templates/_post.html
+++ b/blogweb/app/templates/_post.html
@@ -4,9 +4,9 @@
       <td><img src="{{ post.author.avatar(100) }} " style="width: 100px; height: 100px;"></td>
       <td>
         <strong>
-          <p><a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+          <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
         </strong> said:</p><p><a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a></p>
-
+        <p>Replies: {{ post.replies_count() }}</p>
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
   </tr>
 </table><hr>
