--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -8,7 +8,7 @@
           post.author.username }}</a></strong>
         <div class="post-title">
           <a class="post-title" href="{{ url_for('post_detail', post_id=post.id) }}">{{
-            post.title }}</a>
+            post.title }}</a>   <p>Replies: {{ post.replies_count() }}</p>
         </div>
         <div class="post-date">
           Posted on: {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
