front end improvement, add user popup content

--- a/blogweb/app/static/edit_profile.css
+++ b/blogweb/app/static/edit_profile.css
@@ -69,20 +69,23 @@ body {
 /* -- Image upload submit button -- */
 #image-button {
   position: absolute;
-  top: 75px;
+  top: 60px;
   left: 45px;
 }
 /* -- Set default button -- */
 #image-default {
   position: absolute;
-  top:15px;
+  top:10px;
   left:45px;
-  background: none;
-  background-color: #F0F0F0;
-  color: black;
-  border: 1px solid;
-  border-color: gray;
-  border-radius: 2px;
+  width:70px;
+  height:40px;
+  margin-bottom: 12px;
+  /* background: none; */
+  /* background-color: #F0F0F0; */
+  /* color: black; */
+  /* border: 1px solid; */
+  /* border-color: gray; */
+  /* border-radius: 2px; */
   padding: 1px;
 
 }
@@ -93,8 +96,8 @@ body {
   height: 100px;
   border-radius: 10%;
   margin-bottom: 10px;
-  border: 2px solid;
-  border-color: #333;
+  /* border: 2px solid;
+  border-color: #333; */
 }
 
 #editForm label {
