--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -1,19 +1,41 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='questionForm.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='question_post.css') }}">
 
 <table>
   <tr valign="top">
-    <td style:"width=70px"><img src="{{ post.author.avatar(80) }}"></td>
-    <td class = "post-area">
-      <strong><a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
-          post.author.username }}</a></strong>
+    <div class="post">
+      <div class="post-left">
+        <img src="{{ post.author.avatar(80) }}">
+
+      </div>
+      <div class="post-middle">
+        <div>
+          <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
+            post.author.username }}</a>
+        </div>
+        
         <div class="post-title">
           <a class="post-title" href="{{ url_for('post_detail', post_id=post.id) }}">{{
             post.title }}</a>
         </div>
+
+      </div>
+      <div class="post-count">
+        200
+      </div>
+      <div class=post-right>
         <div class="post-date">
-          Posted on: {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
+          <div>
+            Posted on:
+          </div>
+          <div>
+            {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
+          </div>
+
         </div>
-    </td>
+
+      </div>
+
+    </div>
   </tr>
 </table>
 <hr>
