--- a/blogweb/app/templates/send_message.html
+++ b/blogweb/app/templates/send_message.html
@@ -11,7 +11,7 @@
 				<span style="color: red;">[{{ error }}]</span>
 				{% endfor %}
 		</p>
-		<p>{{ form.submit() }}</p>
+		<p>{{ form.submit(class="btn btn-primary") }}</p>
 </form>
 {% endif %}
 {% endblock %}
