--- a/blogweb/app/templates/edit_profile.html
+++ b/blogweb/app/templates/edit_profile.html
@@ -2,8 +2,9 @@
 {% block title %}Edit Profile{% endblock %}
 {% block styles %}
   <link rel="stylesheet" href="{{ url_for('static', filename='edit_profile.css') }}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-{% endblock %}
+  {% endblock %}
 
 {% block content %}
   <div class="edit-container">
@@ -17,8 +18,8 @@
               <input type="file" name="avatar-upload" id="image-upload" accept="image/*">
               <label for="image-upload"></label>
               <br>
-              <input id="image-button" type="submit" value="Upload">
-              <button id="image-default" type="button">Default</button>
+              <input id="image-button" type="submit" value="Upload"class = "btn btn-outline-primary">
+              <button id="image-default" type="button" class = "btn btn-primary">Default</button>
             </form>
           </div>
         </div>
@@ -26,7 +27,7 @@
           <p><strong>Username: </strong><span id="username">{{ user.username }}</span></p>
           <p><strong>Email: </strong><span id="email">{{ user.email }}</span></p>
           <p><strong>About me: </strong><span id="bio">{{ user.about_me }}</span></p>
-          <button id="editBtn">Edit</button>
+          <button id="editBtn" class = "btn btn-outline-primary">Edit</button>
         </div>
       </div>
     </div>
@@ -48,7 +49,7 @@
       {% for error in form.about_me.errors %}
       <span style="color: red;">[{{ error }}]</span>
       {% endfor %}<br>
-      {{ form.submit() }}<br /><br />
+      {{ form.submit(class="btn btn-primary") }}<br /><br />
     </form>
   </div>
   <script>
