--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -3,144 +3,238 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 {% endblock %}
 
 {% block content %}
-<div class="main-content" style = "margin-left: 20px;">
-    <h1>Hi, {{ current_user.username }}!</h1>
-    <button id="displayPostBtn" style = "margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">Show Question
-        form</button>
+<div class="main-content" style="margin-left: 20px;">
+	<h1>Hi, {{ current_user.username }}!</h1>
+	<button id="displayPostBtn" style="margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">Show
+		Question
+		form</button>
 
-    <form id="postForm" action="" method="POST" style="margin:20px; display: none">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.title.label }}<br>
-            {{ form.title(size=50) }}<br>
-            {% for error in form.title.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.content.label }}<br>
-            {{ form.content(cols=50, rows=4) }}<br>
-            {% for error in form.content.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    <ul class="nav nav-tabs" style="cursor:pointer">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
-        </li>
-        <li class="nav-item" onclick="showTab(event, 'tab3')">
-          <a class="nav-link" >Follower Rank</a>
-        </li>
-      </ul>
- 
-    <div id="tab1"  class="tabcontent" style="display: block;">
+	<form id="postForm" action="" method="POST" style="margin:20px; display: none">
+		{{ form.hidden_tag() }}
+		<p>
+			{{ form.title.label }}<br>
+			{{ form.title(size=50) }}<br>
+			{% for error in form.title.errors %}
+			<span style="color: red;">[{{ error }}]</span>
+			{% endfor %}
+		</p>
+		<p>
+			{{ form.content.label }}<br>
+			{{ form.content(cols=50, rows=4, id="post-contnet") }}<br>
+			{% for error in form.content.errors %}
+			<span style="color: red;">[{{ error }}]</span>
+			{% endfor %}
+		</p>
+		<p>{{ form.submit(class="btn btn-primary") }}</p>
+	</form>
+	<ul class="nav nav-tabs" style="cursor:pointer">
+		<li class="nav-item">
+			<a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
+		</li>
+		<li class="nav-item" onclick="showTab(event, 'tab3')">
+			<a class="nav-link">Follower Rank</a>
+		</li>
+	</ul>
+	<div class="tabs-container">
 
-        <h3>Recent Post</h3>
+		<div id="tab1" class="tabcontent" style="display: block;">
+			<div class="tabcontent-post">
+				<h3>Recent Post</h3>
+				<div class=tabcontent-post-title>
+					<div class=title-left>
+						Forums
+					</div>
+					<div class=title-middle>
+						<div class="post-title">
+							Question Title
+						</div>
+
+					</div>
+					<div class=title-right>
+						<div class="title-count">
+							Count
+						</div>
+						<div class="title-date">
+							Date
+						</div>
+
+					</div>
+
+				</div>
 
 
-        {% for post in all_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
+				{% for post in all_posts %}
+				{% include '_post_question.html' %}
+				{% endfor %}
+			</div>
 
-		<nav aria-label="Page navigation example">
-			<ul class="pagination justify-content-center">
-		
-				{% if all_posts.has_prev %}
+			<nav aria-label="Page navigation example">
+				<ul class="pagination justify-content-center">
+
+					{% if all_posts.has_prev %}
 					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">First</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.prev_num) }}">Prev</a></li>
-				{% else %}
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.prev_num) }}">Prev</a>
+					</li>
+					{% else %}
 					<li class="page-item disabled"><span class="page-link">First</span></li>
-				{% endif %}
-		
-				{% if all_posts.page > 4 %}
+					{% endif %}
+
+					{% if all_posts.page > 4 %}
 					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">1</a></li>
 					<li class="page-item disabled"><span class="page-link">...</span></li>
-				{% endif %}
-		
-				{% for p in range(all_posts.page - 2, all_posts.page + 3) if p > 0 and p <= all_posts.pages %}
-					<li class="page-item {% if p == all_posts.page %}active{% endif %}">
+					{% endif %}
+
+					{% for p in range(all_posts.page - 2, all_posts.page + 3) if p > 0 and p <= all_posts.pages %} <li
+						class="page-item {% if p == all_posts.page %}active{% endif %}">
 						{% if p == all_posts.page %}
-							<span class="page-link">{{ p }}</span>
+						<span class="page-link">{{ p }}</span>
 						{% else %}
-							<a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
+						<a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
 						{% endif %}
-					</li>
-				{% endfor %}
-		
-				{% if all_posts.page < all_posts.pages - 3 %}
-					<li class="page-item disabled"><span class="page-link">...</span></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">{{ all_posts.pages }}</a></li>
-				{% endif %}
-		
-				{% if all_posts.has_next %}
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.next_num) }}">Next</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">Last</a></li>
-				{% else %}
-					<li class="page-item disabled"><span class="page-link">Next</span></li>
-					<li class="page-item disabled"><span class="page-link">Last</span></li>
-				{% endif %}		
-			</ul>
-		</nav>	
-    </div>
-    <!-- follower post -->
-    <div id="tab2" class="tabcontent">
-        {% for post in follow_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
-    </div>
-       
-    <div id="tab3" class="tabcontent">
-        <h3>Tab 3 content</h3>
-        <p>This is the content for tab 3.</p>
-    </div>
-	
-{% endblock %}
+						</li>
+						{% endfor %}
 
-      
+						{% if all_posts.page < all_posts.pages - 3 %} <li class="page-item disabled"><span
+								class="page-link">...</span></li>
+							<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">{{
+									all_posts.pages }}</a></li>
+							{% endif %}
+
+							{% if all_posts.has_next %}
+							<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.next_num) }}">Next</a>
+							</li>
+							<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">Last</a>
+							</li>
+							{% else %}
+							<li class="page-item disabled"><span class="page-link">Next</span></li>
+							<li class="page-item disabled"><span class="page-link">Last</span></li>
+							{% endif %}
+				</ul>
+			</nav>
+		</div>
+
+		<!-- follower post -->
+		<div id="tab2" class="tabcontent">
+			{% for post in follow_posts %}
+			{% include '_post_question.html' %}
+			{% endfor %}
+		</div>
+
+		<div id="tab3" class="tabcontent">
+			<h3>Tab 3 content</h3>
+			<p>This is the content for tab 3.</p>
+		</div>
+	</div>
 
 
-{% block script %}
-<script>
-    function displayPostForm() {
-        let displayPostBtn = document.getElementById("displayPostBtn");
-        let postForm = document.getElementById("postForm")
-        if (postForm.style.display == "none") {
-            postForm.style.display = "block";
-            displayPostBtn.innerHTML = "Hide Question form";
-        } 
-        else {
-            postForm.style.display = "none";
-            displayPostBtn.innerHTML = "Show Question form";
+	<!-- Modal -->
+		<div class="modal fade" id="warnModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5" id="modalTitle">Modal title</h1>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<p id="modalContent">Modal Content</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
 
-        }
-    }
-  
-    function showTab(event, tabName) {
-        var i, tabcontent, navlink;
-        tabcontent = document.getElementsByClassName("tabcontent");
-        for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
-        }
-        navlink = document.getElementsByClassName("nav-link");
-        for (i = 0; i < navlink.length; i++) {
-            navlink[i].className = navlink[i].className.replace(" active", "");
-        }
-        document.getElementById(tabName).style.display = "block";
-        event.currentTarget.className += " active";
-    }
+	{% endblock %}
 
-</script>
-<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
-<script>
-    CKEDITOR.replace('content');
-</script>
-{% endblock %}
 
+
+
+	{% block script %}
+	<script>
+		function displayPostForm() {
+			let displayPostBtn = document.getElementById("displayPostBtn");
+			let postForm = document.getElementById("postForm")
+			if (postForm.style.display == "none") {
+				postForm.style.display = "block";
+				displayPostBtn.innerHTML = "Hide Question form";
+			}
+			else {
+				postForm.style.display = "none";
+				displayPostBtn.innerHTML = "Show Question form";
+
+			}
+		}
+
+		function showTab(event, tabName) {
+			var i, tabcontent, navlink;
+			tabcontent = document.getElementsByClassName("tabcontent");
+			for (i = 0; i < tabcontent.length; i++) {
+				tabcontent[i].style.display = "none";
+			}
+			navlink = document.getElementsByClassName("nav-link");
+			for (i = 0; i < navlink.length; i++) {
+				navlink[i].className = navlink[i].className.replace(" active", "");
+			}
+			document.getElementById(tabName).style.display = "block";
+			event.currentTarget.className += " active";
+		}
+
+	</script>
+	<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
+	<script>
+		CKEDITOR.replace('content');
+	</script>
+	<script>
+		// Constants
+		const CONTENT_MIN_LENGTH = 1;
+		const CONTENT_MAX_LENGTH = 200;
+		let content = "";
+		let title = "Warning!"
+
+		const postForm = document.getElementById('postForm');
+
+		// Selectors
+		const postContent = document.getElementById('post-contnet');
+
+		// Event listeners
+		postForm.addEventListener('submit', validateForm);
+
+
+		// Function to validate the post before submission
+		function validateForm(event) {
+			if (!validatePostContent()) {
+				event.preventDefault();
+				// Update modal title
+				document.getElementById('modalTitle').innerText = title;
+				// Update modal content
+				document.getElementById('modalContent').innerText = content;
+				let modal = new bootstrap.Modal(document.getElementById('warnModal'));
+				modal.show();
+				return;
+			}
+		}
+
+		// Function to validate the aboutMe field (allows it to be empty, but cannot exceed 140 characters if not empty)
+		function validatePostContent() {
+			let postContentData = postContent.value.trim();
+			if (postContentData == '') {
+				content = "Question content is empty. Please enter question content!";
+				return false; // Field is empty, so it's valid
+			} else if (postContentData.length > CONTENT_MAX_LENGTH) {
+				content = "Question content cannot exceed 200 characters.";
+				return false;
+			}
+			return true;
+		}
+	</script>
+
+	{% endblock %}
