--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -23,7 +23,7 @@
         <p>
             <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
                 {{ form.hidden_tag() }}
-                {{ form.submit(value='Unfollow') }}
+                {{ form.submit(class="btn btn-primary", value='Unfollow') }}
             </form>
         </p>
         {% endif %}
