--- a/blogweb/app/templates/user_popup.html
+++ b/blogweb/app/templates/user_popup.html
@@ -1,24 +1,35 @@
-<div>
-  <img src="{{ user.avatar(64) }}" style="margin: 5px; float: left">
-  <p><a href="{{ url_for('user', username=user.username) }}">{{ user.username }}</a></p>
-  {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-  <div class="clearfix"></div>
+<link rel="stylesheet" href="{{ url_for('static', filename='userPopup.css') }}">
 
-  {% if user != current_user %}
+<div class="user-popup">
+  <div class="popup-top">
+    <img src="{{ user.avatar(64) }}" style="margin: 5px; float: left">
+    <div class="popup-top-right">
+      <p><a href="{{ url_for('user', username=user.username) }}">{{ user.username }}</a></p>
+      <span>Follower: {{user.followers_count()}} &nbsp;Following: {{user.following_count()}}</span>
+    </div>
+  </div>
+
+  <div class="popup-bottom">
+    <div class="about-me">
+      About me: {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+    </div>
+    {% if user.last_seen %}<span>Last seen on: {{ user.last_seen.strftime('%Y-%m-%d %H:%M:%S') }}</span>{% endif %}
+    {% if user != current_user %}
     {% if not current_user.is_following(user) %}
     <p>
-      <form action="{{ url_for('follow', username=user.username) }}" method="post">
-        {{ form.hidden_tag() }}
-        {{ form.submit(value=('Follow'), class_='btn btn-outline-primary btn-sm') }}
-      </form>
+    <form action="{{ url_for('follow', username=user.username) }}" method="post">
+      {{ form.hidden_tag() }}
+      {{ form.submit(value=('Follow'), class_='btn btn-outline-primary btn-sm') }}
+    </form>
     </p>
     {% else %}
     <p>
-      <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
-        {{ form.hidden_tag() }}
-        {{ form.submit(value=('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
-      </form>
+    <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+      {{ form.hidden_tag() }}
+      {{ form.submit(value=('Unfollow'), class_='btn btn-outline-primary btn-sm') }}
+    </form>
     </p>
     {% endif %}
-  {% endif %}
+    {% endif %}
+  </div>
 </div>
