--- a/blogweb/app/templates/_post_question.html
+++ b/blogweb/app/templates/_post_question.html
@@ -8,14 +8,16 @@
 
       </div>
       <div class="post-middle">
-        <div>
-          <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
-            post.author.username }}</a>
-        </div>
-        
-        <div class="post-title">
-          <a class="post-title" href="{{ url_for('post_detail', post_id=post.id) }}">{{
-            post.title }}</a>
+        <div class="post-middle-content">
+          <div>
+            <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
+              post.author.username }}</a>
+          </div>
+
+          <div class="post-title">
+            <a class="post-title" href="{{ url_for('post_detail', post_id=post.id) }}">{{
+              post.title }}</a>
+          </div>
         </div>
 
       </div>
