--- a/blogweb/app/templates/post_detail.html
+++ b/blogweb/app/templates/post_detail.html
@@ -20,6 +20,11 @@
         {% for reply in replies %}
             <li>{{ reply.content | safe}}</li>
             <small>By: {{ reply.user.username }}, {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</small>
+            {% if reply.user_id == current_user.id %}
+            <form action="{{ url_for('delete_reply', reply_id=reply.id) }}" method="post">
+                <button type="submit" class="btn btn-danger">Delete Reply</button>
+            </form>
+            {% endif %}
         {% endfor %}
     </ul>
 {% else %}
