--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -1,88 +1,231 @@
 {% extends "base.html" %}
 {% block title %}Profile{% endblock %}
-{% block content %}
-<div class="container mt-3">
-  <table>
-    <tr valign="top">
-        <td><img src="{{ user.avatar(200) }}" style="width: 100px; height: 100px;"></td>
-        <td><h1>User: {{ user.username }}</h1>
-          
-        {% if user.about_me %}<p>About me: {{ user.about_me }}</p>{% endif %}
-        <span>Follower {{user.followers_count()}} Following {{user.following_count()}}</span><br><br>
-        {% if user.last_seen %}<span>Last seen on: {{ user.last_seen.strftime('%Y-%m-%d %H:%M:%S') }}</span>{% endif %}<br><br>
-        {% if user == current_user %}
-        <span><a href="{{ url_for('edit_profile') }}">Edit your profile</a></span>
-        {% elif not current_user.is_following(user) %}
-        <p>
-            <form action="{{ url_for('follow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(value='Follow') }}
-            </form>
-        </p>
-        {% else %}
-        <p>
-            <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(class="btn btn-primary", value='Unfollow') }}
-            </form>
-        </p>
-        {% endif %}
-        {% if user != current_user %}
-          <span>
-              <a href="{{ url_for('send_message',recipient=user.username) }}">{{ ('Send private message') }}</a>
-          </span>
-        {% endif %}
-      </td>
-    </tr>
-</table>
-<hr>
-{% for post in posts %}
-{% include '_post.html' %}
-		{% endfor %}
-
-
-</div>
-
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-
-    {% if posts.has_prev %}
-     
-      <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=1) }}">First</a></li>
-      <li class="page-item"><a class="page-link" href="{{ prev_url }}">Prev</a></li>
-    {% else %}
-      
-      <li class="page-item disabled"><span class="page-link">First</span></li>
-    {% endif %}
-
-    {% if posts.page > 4 %}
-      <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=1) }}">1</a></li>
-      <li class="page-item disabled"><span class="page-link">...</span></li>
-    {% endif %}
-
-    {% for p in range(posts.page - 2, posts.page + 3) if p > 0 and p <= posts.pages %}
-      <li class="page-item {% if p == posts.page %}active{% endif %}">
-        {% if p == posts.page %}
-          <span class="page-link">{{ p }}</span>
-        {% else %}
-          <a class="page-link" href="{{ url_for('user', username=user.username, page=p) }}">{{ p }}</a>
-        {% endif %}
-      </li>
-    {% endfor %}
-
-    {% if posts.page < posts.pages - 3 %}
-      <li class="page-item disabled"><span class="page-link">...</span></li>
-      <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=posts.pages) }}">{{ posts.pages }}</a></li>
-    {% endif %}
-
-    {% if posts.has_next %}
-      <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=posts.next_num) }}">Next</a></li>
-      <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=posts.pages) }}">Last</a></li>
-    {% else %}
-      <li class="page-item disabled"><span class="page-link">Next</span></li>
-      <li class="page-item disabled"><span class="page-link">Last</span></li>
-    {% endif %}
-
-  </ul>
-</nav>
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='user.css') }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 {% endblock %}
+
+{% block content %}
+<div class="container mt-3 sm-2 md-3 mb-2 user-container">
+  <div class="user-page">
+    <div class="user-top">
+      <div class="card user-card mb-3">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <div class=user-card-left>
+              <img src="{{ user.avatar(200) }}" class="img-fluid rounded-start avatar" alt="Profile Pic">
+              <h3 class="user-name">
+                <!-- User: {{ user.username }} -->
+                <span>Name:</span>
+                <span class="user-name-text" data-bs-toggle="tooltip" data-bs-title="{{ user.username }}"> {{
+                  user.username }}</span>
+              </h3>
+              <p class="card-text"><small class="text-body-secondary"> {% if user.last_seen %}<span>Last seen on: {{
+                    user.last_seen.strftime('%Y-%m-%d %H:%M:%S') }}</span>{% endif %}<br><br>
+                </small></p>
+            </div>
+
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+
+              <div class="follow-info">
+                <div class="follow-info-each">
+                  <span class="follow-count">{{user.followers_count()}} </span>
+                  <span class="follow-text">Followers</span>
+                </div>
+                <div class="follow-info-each">
+                  <span class="follow-count">{{user.following_count()}}</span>
+                  <span class="follow-text">Following</span>
+                </div>
+              </div>
+
+              <p class="card-text">{% if user.about_me %}
+              <p class="about-me-title">About me:</p>
+              <p class="about-me-text"> {{ user.about_me }}</p>{% endif %}
+              </p>
+              {% if user == current_user %}
+              <span><a href="{{ url_for('edit_profile') }}">Edit your profile</a></span>
+              {% elif not current_user.is_following(user) %}
+              <p>
+              <form action="{{ url_for('follow', username=user.username) }}" method="post">
+                {{ form.hidden_tag() }}
+                {{ form.submit(value='Follow', class="btn btn-primary") }}
+              </form>
+              </p>
+              {% else %}
+              <p>
+              <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                {{ form.hidden_tag() }}
+                {{ form.submit( value='Unfollow',class="btn btn-outline-primary") }}
+              </form>
+              </p>
+              {% endif %}
+              {% if user != current_user %}
+              <span>
+                <a class="send-message" href="{{ url_for('send_message',recipient=user.username) }}">{{ ('Send private
+                  message') }}</a>
+              </span>
+              {% endif %}
+
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="user-bottom">
+      <ul class="nav nav-tabs" style="cursor:pointer">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">User Post</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" onclick="showTab(event, 'tab2')">Reply Post</a>
+        </li>
+      </ul>
+      <div class="user-bottom-middle">
+
+        <div class="tabs-container">
+          <div id="tab1" class="tabcontent" style="display: block;">
+            <div class="tabcontent-post">
+              <div class=post-table-title>
+                <div class=title-left>
+                  Forums
+                </div>
+                <div class=title-middle>
+                  <div class="post-title">
+                    Question Title
+                  </div>
+
+                </div>
+                <div class=title-right>
+                  <div class="title-count">
+                    Reply Count
+                  </div>
+                  <div class="title-date">
+                    Date
+                  </div>
+
+                </div>
+
+              </div>
+              {% if posts.items %}
+              {% for post in posts %}
+              {% include '_post_list.html' %}
+              {% endfor %}
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+        
+                  {% if posts.has_prev %}
+        
+                  <li class="page-item"><a class="page-link"
+                      href="{{ url_for('user', username=user.username, page=1) }}">First</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="{{ prev_url }}">Prev</a></li>
+                  {% else %}
+        
+                  <li class="page-item disabled"><span class="page-link">First</span></li>
+                  {% endif %}
+        
+                  {% if posts.page > 4 %}
+                  <li class="page-item"><a class="page-link" href="{{ url_for('user', username=user.username, page=1) }}">1</a>
+                  </li>
+                  <li class="page-item disabled"><span class="page-link">...</span></li>
+                  {% endif %}
+        
+                  {% for p in range(posts.page - 2, posts.page + 3) if p > 0 and p <= posts.pages %} <li
+                    class="page-item {% if p == posts.page %}active{% endif %}">
+                    {% if p == posts.page %}
+                    <span class="page-link">{{ p }}</span>
+                    {% else %}
+                    <a class="page-link" href="{{ url_for('user', username=user.username, page=p) }}">{{ p }}</a>
+                    {% endif %}
+                    </li>
+                    {% endfor %}
+        
+                    {% if posts.page < posts.pages - 3 %} <li class="page-item disabled"><span class="page-link">...</span></li>
+                      <li class="page-item"><a class="page-link"
+                          href="{{ url_for('user', username=user.username, page=posts.pages) }}">{{ posts.pages }}</a></li>
+                      {% endif %}
+        
+                      {% if posts.has_next %}
+                      <li class="page-item"><a class="page-link"
+                          href="{{ url_for('user', username=user.username, page=posts.next_num) }}">Next</a></li>
+                      <li class="page-item"><a class="page-link"
+                          href="{{ url_for('user', username=user.username, page=posts.pages) }}">Last</a></li>
+                      {% else %}
+                      <li class="page-item disabled"><span class="page-link">Next</span></li>
+                      <li class="page-item disabled"><span class="page-link">Last</span></li>
+                      {% endif %}
+        
+                </ul>
+              </nav>
+              {% else %}
+              <!-- Empty page content -->
+              {% include 'empty.html' %}
+              {% endif %}
+            </div>
+          </div>
+          <div id="tab2" class="tabcontent container">
+            <div class="tabcontent-post">
+              <div class=post-table-title>
+                <div class=title-left>
+                  Forums
+                </div>
+                <div class=title-middle>
+                  <div class="post-title">
+                    Question Title
+                  </div>
+
+                </div>
+                <div class=title-right>
+                  <div class="title-count">
+                    Reply Count
+                  </div>
+                  <div class="title-date">
+                    Date
+                  </div>
+
+                </div>
+
+              </div>
+              {% for post in posts %}
+              {% include '_post_list.html' %}
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+
+
+    </div>
+    {% endblock %}
+
+    {% block script %}
+
+    <script>
+
+      function showTab(event, tabName) {
+        let i, tabcontent, navlink;
+       
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+          tabcontent[i].style.display = "none";
+        }
+        navlink = document.getElementsByClassName("nav-link");
+        for (i = 0; i < navlink.length; i++) {
+          navlink[i].className = navlink[i].className.replace(" active", "");
+        }
+        document.getElementById(tabName).style.display = "block";
+        event.currentTarget.className += " active";
+      }
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+
+    </script>
+    {% endblock %}
